Fix for wrong color at match selected

--- a/desktop-app/css/app.css
+++ b/desktop-app/css/app.css
@@ -356,7 +356,7 @@ html, body, body > div.ng-scope {
 	background-color: #F7F7F7;
 }
 .match.selected {
-	background-color: #F2F2F2;
+	background-color: #F1F1F1;
 }
 
 .info-container {
